# andex

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md  bucket.code-workspace  gen.ts  shell.html
resources/: resources.json
shaders/: shaders.glsl
src/: buffer.c  buffer.h  editor.c  editor.h  files.c  files.h  mac_window.c  main.c  pick.h  resources.h  svg.c  svg.h  utils.h
